---------------------------------------------------------------------------------------------------
Version: 17.0.6
Date: 2019-05-05
  Features:
  Changes:
    - May 2019 mode - ground effect space reserving entities have rock pictures under the smoke so its more apparent they are solid.
  Bugfixes:
    - May 2019 mode - Fix possible infinite loop when trying to find places for missing biters when most have a spot.
    - May 2019 mode - Avoid nil LuaEntity references if a ground movement effect is removed by something else.
    - May 2019 mode - Make ground effect space reserving entities indestructable to avoid issues. Does mean vehicles bounce off them. Need to reserve the space so that biters can safe to spawn there.
  Info:
    - May 2019 mode - Tweak GUI wording.
	- May 2019 mode - Clarify biter/player chat messages
---------------------------------------------------------------------------------------------------
Version: 17.0.5
Date: 2019-05-05
  Features:
  Changes:
  Bugfixes:
    - May 2019 mode - resolved issue with taking an SP game in to MP around GUI creation and destroying.
  Info:
 ---------------------------------------------------------------------------------------------------
Version: 17.0.4
Date: 2019-05-03
  Features:
  Changes:
    - May 2019 mode - made compatible and requires 0.17.35 and above.
  Bugfixes:
  Info:
    - May 2019 mode - changed mod to store targeted PlayerID rather than LuaPlayer object.
---------------------------------------------------------------------------------------------------
Version: 17.0.3
Date: 2019-05-03
  Features:
  Changes:
  Bugfixes:
    - May 2019 mode - doesn't spawn biter hunt groups after a player if they are on a surface with "spaceship" or "Orbit" in the name. This is for Space Exploration mod compatibility.
  Info:
    - Added factorio versions each mode has been tested with.
---------------------------------------------------------------------------------------------------
Version: 17.0.2