@@ -2,5 +2,5 @@
 jd_plays_welcome1=Welcome to May, hope you can run fast...
 
 [gui-caption]
-jd_plays-countdown-label=Next biter pack comming in __1__
+jd_plays-warning-label=Incomming Tunneling Biter Pack
 jd_plays-target-label=Pack currently hunting __1__ on __2__
